--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
       </div>
     </nav>
 
+    <section class="bgimage">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h1>Pizza 42</h1>
+            <h3>The pizza everybody loves, especially developers!</h3>
+            <!-- <p><a href="#" class="btn btn-primary btn-large pizza-button">Learn more »</a></p> -->
+          </div>
+        </div>
+      </div>
+    </section>
+    
     <main class="container">
       <!-- home view -->
       <div id="home-view">
