modified nav bar and added order pizza button

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Calling an API</title>
+  <title>Pizza 42</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,28 +16,28 @@
   </div>
 
   <div class="content">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Auth0 - JavaScript</a>
+          <a class="navbar-brand" href="#">Pizza 42</a>
 
-          <button id="btn-home-view" class="btn btn-primary btn-margin">
+          <button id="btn-home-view" class="btn btn-dark btn-margin">
               Home
           </button>
 
-          <button id="btn-profile-view" class="btn btn-primary btn-margin">
+          <button id="btn-profile-view" class="btn btn-dark btn-margin">
               Profile
           </button>
 
-          <button id="btn-ping-view" class="btn btn-primary btn-margin">
-              Ping
+          <button id="btn-ping-view" class="btn btn-danger btn-margin">
+              Order Pizza
           </button>
 
-          <button id="qsLoginBtn" class="btn btn-primary btn-margin">
+          <button id="qsLoginBtn" class="btn btn-dark btn-margin">
               Log In
           </button>
 
-          <button id="qsLogoutBtn" class="btn btn-primary btn-margin">
+          <button id="qsLogoutBtn" class="btn btn-dark btn-margin">
               Log Out
           </button>
 
@@ -56,7 +56,7 @@
         </div>
       </div>
     </section>
-    
+
     <main class="container">
       <!-- home view -->
       <div id="home-view">
