added api call and other css improvements

--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
 
       <!-- ping view -->
       <div id="ping-view">
-        <h1>Make a Call to the Server</h1>
+        <h1>Call up Pizza 42 and get that delicous pizza ordered!</h1>
 
         <p id="call-private-message">
-          Log in to order a delicous Pizza from Pizza 42.
+          Log in and verify your email to order a delicous Pizza from Pizza 42.
         </p>
-
-        <button id="btn-ping-public" class="btn btn-primary">
+        <!-- Public API Call  -->
+        <!-- <button id="btn-ping-public" class="btn btn-primary">
             Call Public
-        </button>
+        </button> -->
 
-        <button id="btn-ping-private" class="btn btn-primary">
-            Order Pizza
+        <button id="btn-ping-private" class="btn btn-lg btn-danger">
+            Order Pizza 
         </button>
 
         <h2 id="ping-message"></h2>
